# BMS_Firmware

./: .gitignore  README.md  fw.pkg
HARDWARE/ENNOID_BMS/: BMS Hardware-Firmware Supporting Documentation.docx
HARDWARE/ENNOID_BMS/Cell Tap Fuse Board 2x/: Cell Tap Fuse Board 2x-B_Cu.gbr  Cell Tap Fuse Board 2x-B_Mask.gbr  Cell Tap Fuse Board 2x-B_Paste.gbr  Cell Tap Fuse Board 2x-B_Silkscreen.gbr  Cell Tap Fuse Board 2x-Edge_Cuts.gbr  Cell Tap Fuse Board 2x-F_Cu.gbr  Cell Tap Fuse Board 2x-F_Mask.gbr  Cell Tap Fuse Board 2x-F_Paste.gbr  Cell Tap Fuse Board 2x-F_Silkscreen.gbr  Cell Tap Fuse Board 2x-job.gbrjob  Cell Tap Fuse Board 2x.csv  Cell Tap Fuse Board 2x.kicad_pcb  Cell Tap Fuse Board 2x.kicad_prl  Cell Tap Fuse Board 2x.kicad_pro  Cell Tap Fuse Board 2x.kicad_sch  Cell Tap Fuse Board 2x.step  Cell Tap Fuse Board.numbers
HARDWARE/ENNOID_BMS/Cell Tap Fuse Board 3x/: Cell Tap Fuse Board 3x.kicad_pcb  Cell Tap Fuse Board 3x.kicad_pro  Cell Tap Fuse Board 3x.kicad_sch  Cell Tap Fuse Board 3x.step  Cell Tap Fuse Board.csv
HARDWARE/ENNOID_BMS/Master/: BMS-Master-B_Cu.gbr  BMS-Master-B_Mask.gbr  BMS-Master-B_Paste.gbr  BMS-Master-B_Silkscreen.gbr  BMS-Master-Edge_Cuts.gbr  BMS-Master-F_Cu.gbr  BMS-Master-F_Mask.gbr  BMS-Master-F_Paste.gbr  BMS-Master-F_Silkscreen.gbr  BMS-Master-NPTH.drl  BMS-Master-PTH.drl  BMS-Master-bottom.pos  BMS-Master-job.gbrjob  BMS-Master-top.pos  BMS-Master.csv  BMS-Master.kicad_pcb  BMS-Master.kicad_prl  BMS-Master.kicad_pro  BMS-Master.kicad_sch  BMS-Master_smd.csv  BMS_OK.kicad_sch  CAN.kicad_sch  MCU.kicad_sch  PowerMonitor.kicad_sch  PowerSupply.kicad_sch  USB.kicad_sch  switches.kicad_sch
HARDWARE/ENNOID_BMS/Master/ENNOID.pretty/: EVC500.kicad_mod  HM2108NL.kicad_mod  SAMESKY_UJ20-C-H-G-SMT-1-P16-TR.kicad_mod
HARDWARE/ENNOID_BMS/Slave/: LTC6812-15W 3.csv  LTC6812-15W final.csv  LTC6812-15W-B_Cu.gbr  LTC6812-15W-B_Mask.gbr  LTC6812-15W-B_Paste.gbr  LTC6812-15W-B_Silkscreen.gbr  LTC6812-15W-Edge_Cuts.gbr  LTC6812-15W-F_Cu.gbr  LTC6812-15W-F_Mask.gbr  LTC6812-15W-F_Paste.gbr  LTC6812-15W-F_Silkscreen.gbr  LTC6812-15W-bottom.pos  LTC6812-15W-job.gbrjob  LTC6812-15W-top.pos  LTC6812-15W.csv  LTC6812-15W.kicad_pcb  LTC6812-15W.kicad_prl  LTC6812-15W.kicad_pro  LTC6812-15W.kicad_sch  LTC6812-15W_BOM_SMD.csv  cell.kicad_sch
HARDWARE/ENNOID_BMS/Slave/ENNOID.pretty/: FUSC10948X488N.kicad_mod  TQFP-64-1EP_10x10mm_P0.5mm_EP8x8mm.kicad_mod
HARDWARE/ENNOID_BMS/diagrams/: LTC6812-15W_diagram.kicad_pro  LTC6812-15W_diagram.kicad_sch
bootloader/: CMakeLists.txt  README.md
bootloader/include/: bl_config.h
bootloader/linker/: stm32f303vc_bootloader.ld
bootloader/src/: bl_flash.c  bl_flash.h  bl_jump.c  bl_protocol.c  bl_protocol.h  bl_uart.c  bl_uart.h  bl_validate.c  main.c
build_firmware/: .ninja_deps  .ninja_log  bms_firmware.elf  firmware.hex  firmware.map
build_tests/: run_tests.sh  test_balance  test_bms_outputs  test_bootloader_validate  test_config_masks  test_config_validate  test_faults  test_flash_layout  test_measurements_decode  test_openwire  test_pec15  test_protocol_crc
docs/: 00_system_purpose.md  01_hardware_contract.md  02_safety_model.md  06_flash_and_bootloader.md  07_desktop_tool_design.md  bench_safety_checklist.md  first_flash_guide.md  uart_smoke_test.md
firmware/: CMakeLists.txt  README.md
firmware/include/: bms_constants.h  bms_protocol_ids.h  bms_types.h
firmware/linker/: stm32f303vc_bms.ld
firmware/src/: bms_main_loop.c  main.c
firmware/src/bms/: bms_balance.c  bms_charger.c  bms_charger.h  bms_config.c  bms_config.h  bms_faults.c  bms_faults.h  bms_measurements.c  bms_outputs.c  bms_protocol.c  bms_soc.c  bms_soc.h  bms_state.c
firmware/src/board/: board_adc.c  board_can.c  board_can.h  board_clock.c  board_clock.h  board_i2c.c  board_i2c.h  board_inputs.c  board_inputs.h  board_outputs.c  board_outputs.h  board_pins.h  board_spi.c  board_uart.c
firmware/src/drivers/: isospi.c  isospi.h  ltc6812.c  ltc6812.h
firmware/startup/: startup_stm32f303vc.s
protocol/: config_schema.yaml  fault_bits.yaml  packet_ids.yaml
scripts/: bmsctl.sh  build_bootloader.sh  demo_local.sh  first_flash_dry_run.sh  flash_stlink.sh  package_release.sh  run_fake_hardware.sh  run_gui.sh  setup_dev_env.sh  validate_all.sh
tests/mock_bsp/: mock_board_can.c  mock_board_can.h  mock_board_clock.c  mock_board_i2c.c  mock_meas_deps.c  mock_protocol_deps.c
tests/unit/: test_balance.c  test_bms_charger.c  test_bms_outputs.c  test_bootloader_protocol.c  test_bootloader_validate.c  test_config_validate.c  test_enepaq_table.c  test_faults.c  test_isl28022.c  test_measurements_decode.c  test_openwire.c
tool/: README.md  requirements.txt
tool/src/cli/: bmsctl.py
tool/src/config/: schema.py  validator.py
tool/src/core/: app_state.py  connection_manager.py  logging_model.py  polling.py  target_model.py
tool/src/fake_target/: fake_target.py  live_simulator.py
tool/src/gui/: main.py  style.py
tool/src/gui/pages/: bringup.py  cells.py  charging.py  config.py  connection.py  dashboard.py  faults.py  firmware_flash.py  logs.py  temperatures.py
tool/src/protocol/: bms_defs.py  client.py  packet_defs.py
tool/src/update/: bootloader_updater.py  package_builder.py  package_parser.py  stlink.py
tool/tests/: test_backend.py  test_bootloader_update.py  test_cli.py  test_config_validator.py  test_diagnostics_and_modes.py  test_fake_target.py  test_gui_pages.py  test_gui_smoke.py  test_live_simulator.py  test_measure_cli.py  test_openwire_cli.py  test_protocol_sync.py  test_scripts.py
